fix: run the ci, when the workflow file is change for container image build

--- a/.gitea/workflows/container-image.yaml
+++ b/.gitea/workflows/container-image.yaml
@@ -6,6 +6,7 @@ name: kubeaid CI image
       - master
     paths:
       - '.gitea/Dockerfile'
+      - '.gitea/workflows/container-image.yaml'
 
 permissions:
   contents: read
