Adding support for specifying root EBS volume size
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSMachinePool.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSMachinePool.yaml
@@ -14,5 +14,7 @@ spec:
     instanceType: {{ $machinePool.instanceType }}
     sshKeyName: {{ $machinePool.sshKeyName }}
     imageLookupBaseOS: ubuntu-20.04
+    rootVolume:
+      size: {{ $machinePool.rootVolumeSize | default 35 }}
 {{- end }}
 {{- end }}
