--- a/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/values.yaml
+++ b/argocd-helm-charts/kubernetes-dashboard/charts/kubernetes-dashboard/values.yaml
@@ -84,6 +84,8 @@ app:
     #  resourceAutoRefreshTimeInterval: 10
     #  # Hide all access denied warnings in the notification panel
     #  disableAccessDeniedNotifications: false
+    #  # Hide all namespaces option in namespace selection dropdown to avoid accidental selection in large clusters thus preventing OOM errors
+    #  hideAllNamespaces: false
     #  # Namespace that should be selected by default after logging in.
     #  defaultNamespace: default
     #  # List of namespaces that should be presented to user without namespace list privileges.
@@ -143,7 +145,7 @@ auth:
   role: auth
   image:
     repository: docker.io/kubernetesui/dashboard-auth
-    tag: 1.2.1
+    tag: 1.2.2
   scaling:
     replicas: 1
     revisionHistoryLimit: 10
@@ -182,7 +184,7 @@ api:
   role: api
   image:
     repository: docker.io/kubernetesui/dashboard-api
-    tag: 1.10.0
+    tag: 1.10.1
   scaling:
     replicas: 1
     revisionHistoryLimit: 10
@@ -239,7 +241,7 @@ web:
   role: web
   image:
     repository: docker.io/kubernetesui/dashboard-web
-    tag: 1.5.1
+    tag: 1.6.0
   scaling:
     replicas: 1
     revisionHistoryLimit: 10
