--- a/argocd-helm-charts/tigera-operator/charts/tigera-operator/Chart.yaml
+++ b/argocd-helm-charts/tigera-operator/charts/tigera-operator/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-appVersion: v3.28.2
+appVersion: v3.29.0
 description: Installs the Tigera operator for Calico
-home: https://projectcalico.docs.tigera.io/about/about-calico
-icon: https://projectcalico.docs.tigera.io/images/felix_icon.png
+home: https://docs.tigera.io/calico
+icon: https://docs.tigera.io/img/calico-logo.png
 name: tigera-operator
 sources:
-- https://github.com/projectcalico/calico/tree/master/calico/_includes/charts/tigera-operator
+- https://github.com/projectcalico/calico/tree/master/charts/tigera-operator
 - https://github.com/tigera/operator
 - https://github.com/projectcalico/calico
-version: v3.28.2
+version: v3.29.0
