--- a/argocd-helm-charts/traefik/charts/traefik/templates/rbac/clusterrole.yaml
+++ b/argocd-helm-charts/traefik/charts/traefik/templates/rbac/clusterrole.yaml
@@ -69,7 +69,7 @@ rules:
       - get
       - list
       - watch
-    {{- if and .Values.hub.token .Values.hub.apimanagement.enabled }}
+    {{- if and .Values.hub.token }}
       - update
       - create
       - delete
@@ -133,6 +133,9 @@ rules:
     {{- end }}
       - secrets
       - services
+    {{- if semverCompare ">=v3.2.0-0" $version }}
+      - configmaps
+    {{- end }}
     verbs:
       - get
       - list
