--- a/argocd-helm-charts/traefik/templates/wildcard-certificate.yaml
+++ b/argocd-helm-charts/traefik/templates/wildcard-certificate.yaml
@@ -3,15 +3,16 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ include "cert-manager.namefix" . }}
+  name: {{ include "wildcard-cert.namefix" . }}
 spec:
-  secretName: {{ include "cert-manager.namefix" . }}
+  secretName: {{ include "wildcard-cert.namefix" . }}
   issuerRef:
     group: cert-manager.io
     kind: ClusterIssuer
-    name: {{ $.Values.issuer.name | quote }}
+    name: {{ $.Values.wildcardCertificates.issuer | quote }}
   dnsNames:
   - "{{ . }}"
+  - {{ . | replace "*" "" | printf "%s" | trimPrefix "." }}
 
 ---
 {{- end -}}
