--- a/argocd-helm-charts/prometheus-linuxaid/rules/dns.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/rules/dns.yaml
@@ -2,11 +2,14 @@ groups:
   - name: monitor::system::dns
     rules:
       - alert: monitor::system::dns::resolution
-        expr: node_dns_test_result{status="failed"} == 1
+        expr: |
+         (
+           node_dns_test_result{status="failed"} == 1
+         ) and on(certname) obmondo_monitoring{alert_id="monitor::system::dns::resolution"} > 0
         for: 5m
         labels:
           severity: critical
           alert_id: monitor::system::dns::resolution
         annotations:
           summary: "DNS resolution failed"
-          description: DNS resolution has failed for **{{ .Labels.host }}** host because of **{{ .Labels.result }}**
+          description: DNS resolution has failed for **{{ .Labels.host }}** host because of **{{ .Labels.result }}** for certname **{{ .Labels.certname }}**
