--- a/argocd-helm-charts/prometheus-linuxaid/values.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/values.yaml
@@ -24,6 +24,7 @@ grafana:
   server: graphs.obmondo.com
   version: 11.1.4
 prometheusRule:
+  dns: true
   backup: true
   btrfs: true
   cert_expiry: true
