--- a/argocd-helm-charts/keda/charts/keda/templates/metrics-server/clusterrole.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/metrics-server/clusterrole.yaml
@@ -14,7 +14,7 @@ rules:
 - apiGroups:
   - external.metrics.k8s.io
   resources:
-  - '*'
+  - 'externalmetrics'
   verbs:
-  - '*'
+  - 'get'
 {{- end -}}
