--- a/argocd-helm-charts/keda/charts/keda/templates/metrics-server/clusterrolebinding.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/metrics-server/clusterrolebinding.yaml
@@ -59,5 +59,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: horizontal-pod-autoscaler
-  namespace: {{ .Values.rbac.controlPlaneServiceAccountsNamespace }}
+  namespace: kube-system
 {{- end -}}
