--- a/argocd-helm-charts/keda/charts/keda/templates/crds/crd-clustercloudeventsources.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/crds/crd-clustercloudeventsources.yaml
@@ -3,22 +3,19 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
-    {{- if (or .Values.crds.additionalAnnotations .Values.additionalAnnotations) }}
-    {{- toYaml (merge .Values.crds.additionalAnnotations .Values.additionalAnnotations) | nindent 4 }}
-    {{- end }}
+    controller-gen.kubebuilder.io/version: v0.13.0
   labels:
     app.kubernetes.io/name: {{ .Values.operator.name }}
     {{- include "keda.crd-labels" . | indent 4 }}
-  name: cloudeventsources.eventing.keda.sh
+  name: clustercloudeventsources.eventing.keda.sh
 spec:
   group: eventing.keda.sh
   names:
-    kind: CloudEventSource
-    listKind: CloudEventSourceList
-    plural: cloudeventsources
-    singular: cloudeventsource
-  scope: Namespaced
+    kind: ClusterCloudEventSource
+    listKind: ClusterCloudEventSourceList
+    plural: clustercloudeventsources
+    singular: clustercloudeventsource
+  scope: Cluster
   versions:
   - additionalPrinterColumns:
     - jsonPath: .status.conditions[?(@.type=="Active")].status
@@ -27,8 +24,6 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: CloudEventSource defines how a KEDA event will be sent to event
-          sink
         properties:
           apiVersion:
             description: |-
