--- a/argocd-helm-charts/keda/charts/keda/templates/manager/clusterrole.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/manager/clusterrole.yaml
@@ -29,11 +29,12 @@ rules:
   resources:
   - events
   verbs:
-  - '*'
+  - create
+  - patch
 {{- if not .Values.permissions.operator.restrict.secret }}
 - apiGroups:
   - ""
-  resources:    
+  resources:
   - secrets
   verbs:
   - list
@@ -66,7 +67,7 @@ rules:
   - {{ .kind | quote }}
   verbs:
   - get
-  {{- end }}   
+  {{- end }}
 {{- end }}
 - apiGroups:
   - apps
@@ -93,20 +94,38 @@ rules:
   resources:
   - horizontalpodautoscalers
   verbs:
-  - '*'
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - batch
   resources:
   - jobs
   verbs:
-  - '*'
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - eventing.keda.sh
   resources:
   - cloudeventsources
   - cloudeventsources/status
+  - clustercloudeventsources
+  - clustercloudeventsources/status
   verbs:
-  - '*'
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - keda.sh
   resources:
@@ -119,7 +138,11 @@ rules:
   - triggerauthentications
   - triggerauthentications/status
   verbs:
-  - '*'
+  - get
+  - list
+  - patch
+  - update
+  - watch
 {{- if .Values.rbac.aggregateToDefaultRoles }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -148,6 +171,7 @@ rules:
   - eventing.keda.sh
   resources:
   - cloudeventsources
+  - clustercloudeventsources
   verbs:
   - create
   - delete
@@ -180,6 +204,7 @@ rules:
   - eventing.keda.sh
   resources:
   - cloudeventsources
+  - clustercloudeventsources
   verbs:
   - get
   - list
