--- a/argocd-helm-charts/keda/charts/keda/templates/metrics-server/service.yaml
+++ b/argocd-helm-charts/keda/charts/keda/templates/metrics-server/service.yaml
@@ -32,10 +32,14 @@ spec:
     port: {{ .Values.service.portHttps }}
     targetPort: {{ .Values.service.portHttpsTarget }}
     protocol: TCP
+    appProtocol: https
   - name: {{ .Values.prometheus.metricServer.portName }}
     port: {{ .Values.prometheus.metricServer.port }}
     targetPort: {{ .Values.prometheus.metricServer.port }}
     protocol: TCP
+    {{- with .Values.prometheus.metricServer.appProtocol }}
+    appProtocol: {{ . }}
+    {{- end }}
   {{- if .Values.profiling.metricsServer.enabled }}
   - name: profiling
     port: {{ .Values.profiling.metricsServer.port }}
