--- a/argocd-helm-charts/sealed-secrets/charts/sealed-secrets/values.yaml
+++ b/argocd-helm-charts/sealed-secrets/charts/sealed-secrets/values.yaml
@@ -39,7 +39,7 @@ commonLabels: {}
 image:
   registry: docker.io
   repository: bitnami/sealed-secrets-controller
-  tag: 0.27.1
+  tag: 0.27.2
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -230,9 +230,25 @@ additionalVolumes: []
 additionalVolumeMounts: []
 ## @param hostNetwork Sealed Secrets pods' hostNetwork
 hostNetwork: false
+## Sealed Secrets controller ports to open
+## If hostNetwork true: the hostPort is set identical to the containerPort
+## @param containerPorts.http Controller HTTP Port on the Host and Container
+## @param containerPorts.metrics Metrics HTTP Port on the Host and Container
+##
+containerPorts:
+  http: 8080
+  metrics: 8081
+## Sealed Secrets controller ports to be exposed as hostPort
+## If hostNetwork is false, only the ports specified here will be exposed (or not if set to an empty string)
+## @param hostPorts.http Controller HTTP Port on the Host
+## @param hostPorts.metrics Metrics HTTP Port on the Host
+##
+hostPorts:
+  http: ""
+  metrics: ""
+
 ## @param dnsPolicy Sealed Secrets pods' dnsPolicy
 dnsPolicy: ""
-
 ## @section Traffic Exposure Parameters
 
 ## Sealed Secret service parameters
