--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmConfig.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/KubeadmConfig.yaml
@@ -1,18 +1,18 @@
 {{- if (.Values.global.capa).autoScaler }}
-{{- range $index, $machinePool := $.Values.machinePools }}
+{{- range $index, $nodeGroup := $.Values.nodeGroups }}
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfig
 metadata:
-  name: {{ printf "%s-%s" $.Values.global.clusterName $machinePool.name }}
+  name: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
 spec:
   joinConfiguration:
     nodeRegistration:
       kubeletExtraArgs:
         cloud-provider: external
       name: '{{"{{"}} ds.meta_data.local_hostname {{"}}"}}'
-      {{- if $machinePool.taints }}
-      taints: {{- toYaml $machinePool.taints | nindent 8 }}
+      {{- if $nodeGroup.taints }}
+      taints: {{- toYaml $nodeGroup.taints | nindent 8 }}
       {{- end }}
 {{- end }}
 {{- end }}
