--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineDeployment.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/MachineDeployment.yaml
@@ -1,22 +1,40 @@
-{{- if (not (.Values.global.capa).autoScaler) }}
+{{- if (.Values.global).enableClusterAutoscaler }}
+{{- range $index, $nodeGroup := $.Values.nodeGroups }}
+---
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineDeployment
 metadata:
-  name: {{ .Values.global.clusterName }}-md-0
+  name: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
+  annotations:
+    cluster.x-k8s.io/cluster-api-autoscaler-node-group-min-size: {{ $nodeGroup.minSize | default 1 | quote }}
+    cluster.x-k8s.io/cluster-api-autoscaler-node-group-max-size: {{ $nodeGroup.maxSize | default 3 | quote }}
 spec:
-  clusterName: {{ .Values.global.clusterName }}
-  replicas: {{ .Values.workerNodes.replicas }}
+  clusterName: {{ $.Values.global.clusterName }}
+  replicas: {{ $nodeGroup.replicas | default 2 }}
   template:
+    {{- if $nodeGroup.labels }}
+    metadata:
+      # Label should meet one of the following criterias to propagate to Node :
+      #
+      # (1) Has node-role.kubernetes.io as prefix.
+      # (2) Belongs to node-restriction.kubernetes.io domain.
+      # (3) Belongs to node.cluster.x-k8s.io domain.
+      #
+      # REFER : https://cluster-api.sigs.k8s.io/developer/architecture/controllers/metadata-propagation#machine
+      labels: {{- toYaml $nodeGroup.labels | nindent 8 }}
+    {{- end }}
+
     spec:
+      clusterName: {{ $.Values.global.clusterName }}
       bootstrap:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
           kind: KubeadmConfigTemplate
-          name: {{ .Values.global.clusterName }}
-      clusterName: {{ .Values.global.clusterName }}
+          name: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta2
         kind: AWSMachineTemplate
-        name: {{ .Values.global.clusterName }}-md-0
-      version: {{ .Values.global.kubernetes.version }}
+        name: {{ printf "%s-%s" $.Values.global.clusterName $nodeGroup.name }}
+      version: {{ $.Values.global.kubernetes.version }}
+{{- end }}
 {{- end }}
