--- a/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
@@ -1,10 +1,10 @@
 {{- if (.Values.provider).aws }}
 
-# For non Obmondo users, no customerid is needed.
+{{- /* For non Obmondo users, no customerid is needed. */ -}}
 {{- $name := "aws" }}
 {{- $namespace := "capi-cluster" }}
 
-# For obmondo customers.
+{{- /* For obmondo customers. */ -}}
 {{- if .Values.global.customerid }}
 {{- $name = printf "%s-%s" $name .Values.global.customerid }}
 {{- $namespace = printf "%s-%s" $namespace .Values.global.customerid }}
