rename smart rule to smartmon_disk_health, add doc on how to test rule locally

--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheusRule-smartmon-disk-health.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheusRule-smartmon-disk-health.yaml
@@ -5,5 +5,5 @@ metadata:
   name: smart-rules
   namespace: monitoring-{{ .Values.customerid }}
 spec:
-  {{- $.Files.Get "rules/smart.yaml" | nindent 4 }}
+  {{- $.Files.Get "rules/smartmon_disk_health.yaml" | nindent 4 }}
 {{- end }}
