Fixing AWS InfrastructureProvider Helm template
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
@@ -27,5 +27,5 @@ spec:
       bindAddress: ":8181"
     syncPeriod: 10m0s
     featureGates:
-      MachinePool: {{ .Values.global.capa.autoScaler }}
+      MachinePool: {{ .Values.global.capa.enableMachinePools }}
 {{- end }}
