Fixed the alert query for domains status

--- a/argocd-helm-charts/prometheus-linuxaid/rules/domain.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/rules/domain.yaml
@@ -3,7 +3,7 @@ groups:
     rules:
     - alert: monitor::domains::status
       expr: |
-        probe_http_status_code != 0 and probe_http_content_length > 0
+        (probe_http_status_code == 0 or probe_http_status_code >= 500) and on(certname) probe_http_content_length <= 0
         and on(certname) obmondo_monitoring{alert_id="monitor::domains::status"} > 0
       labels:
         severity: critical
