Refine scraping alert condition and reduce duration for Prometheus target monitoring
Signed-off-by: Shubham Gupta <sgupta@obmondo.com>

--- a/argocd-helm-charts/prometheus-linuxaid/rules/prometheus.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/rules/prometheus.yaml
@@ -41,9 +41,9 @@ groups:
 
     - alert: PrometheusTargetScrapingSlow
       expr: |
-        prometheus_target_interval_length_seconds{quantile="0.9"} > 61
-        and on(certname) obmondo_monitoring{alert_id="monitor::prometheus::scrapingslow"} > 0
-      for: 10m
+        prometheus_target_interval_length_seconds{quantile="0.9"} / on (interval, instance, job) prometheus_target_interval_length_seconds{quantile="0.5"} > 1.05
+            and on(certname) obmondo_monitoring{alert_id="monitor::prometheus::scrapingslow"} > 0
+      for: 5m
       labels:
         severity: warning
         alert_id: prometheus
