--- a/argocd-helm-charts/argo-cd/charts/argo-cd/templates/argocd-repo-server/servicemonitor.yaml
+++ b/argocd-helm-charts/argo-cd/charts/argo-cd/templates/argocd-repo-server/servicemonitor.yaml
@@ -35,6 +35,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.repoServer.metrics.serviceMonitor.scheme }}
+      honorLabels: {{ .Values.repoServer.metrics.serviceMonitor.honorLabels }}
       scheme: {{ . }}
       {{- end }}
       {{- with .Values.repoServer.metrics.serviceMonitor.tlsConfig }}
