[CI] Helm Chart Update aws-ebs-csi-driver

--- a/argocd-helm-charts/aws-ebs-csi-driver/charts/aws-ebs-csi-driver/templates/node.yaml
+++ b/argocd-helm-charts/aws-ebs-csi-driver/charts/aws-ebs-csi-driver/templates/node.yaml
@@ -27,7 +27,7 @@
                 (dict
                   "key" "eks.amazonaws.com/compute-type"
                   "operator" "NotIn"
-                  "values" (list "fargate")
+                  "values" (list "fargate" "auto" "hybrid")
                 )
                 (dict
                   "key" "node.kubernetes.io/instance-type"
