fix: look for servicemonitor under monitoring and puppetserver for customers

--- a/argocd-helm-charts/prometheus-linuxaid/templates/prometheus.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/templates/prometheus.yaml
@@ -21,7 +21,13 @@ spec:
   ruleSelector: {}
   scrapeConfigNamespaceSelector: null
   scrapeConfigSelector: {}
-  serviceMonitorNamespaceSelector: null
+  serviceMonitorNamespaceSelector:
+    matchExpressions:
+      - key: kubernetes.io/metadata.name
+        operator: In
+        values:
+          - monitoring-{{ .Values.customerid }}
+          - puppetserver-{{ .Values.customerid }}
   serviceMonitorSelector: {}
   replicas: 1
   retention: {{ .Values.prometheus.retention | default "15d" | }}
