--- a/argocd-helm-charts/smartmon-exporter/values.yaml
+++ b/argocd-helm-charts/smartmon-exporter/values.yaml
@@ -1,3 +1,10 @@
 prometheus-smartctl-exporter:
   serviceMonitor:
     enabled: true
+    relabelings:
+      - action: replace
+        regex: (.*)
+        replacement: ${1}
+        sourceLabels:
+          - __meta_kubernetes_pod_node_name
+        targetLabel: instance
