--- a/argocd-helm-charts/puppetserver/values.yaml
+++ b/argocd-helm-charts/puppetserver/values.yaml
@@ -5,6 +5,10 @@ puppetserver:
     masters:
       ingress:
         enabled: false
+      extraEnv:
+        PUPPETSERVER_JAVA_ARGS: "-XX:+HeapDumpOnOutOfMemoryError"
+        PUPPETSERVER_MAX_ACTIVE_INSTANCES: 3
+        PUPPETSERVER_MAX_REQUESTS_PER_INSTANCE: 10000
 
   r10k:
     asSidecar: false
@@ -21,6 +25,7 @@ puppetserver:
     name: puppetdb
     extraEnv:
       PUPPETDB_POSTGRES_HOSTNAME: puppetserver-pgsql-rw
+      PUPPETDB_JAVA_ARGS: "-Xms256m -Xmx256m -XX:+HeapDumpOnOutOfMemoryError"
 
   puppetboard:
     enabled: true
