--- a/argocd-helm-charts/argo-cd/charts/argo-cd/templates/crds/crd-application.yaml
+++ b/argocd-helm-charts/argo-cd/charts/argo-cd/templates/crds/crd-application.yaml
@@ -125,6 +125,11 @@ spec:
               sync:
                 description: Sync contains parameters for the operation
                 properties:
+                  autoHealAttemptsCount:
+                    description: SelfHealAttemptsCount contains the number of auto-heal
+                      attempts
+                    format: int64
+                    type: integer
                   dryRun:
                     description: DryRun specifies to perform a `kubectl apply --dry-run`
                       without actually performing the sync
@@ -2720,6 +2725,11 @@ spec:
                       sync:
                         description: Sync contains parameters for the operation
                         properties:
+                          autoHealAttemptsCount:
+                            description: SelfHealAttemptsCount contains the number
+                              of auto-heal attempts
+                            format: int64
+                            type: integer
                           dryRun:
                             description: DryRun specifies to perform a `kubectl apply
                               --dry-run` without actually performing the sync
@@ -5356,3 +5366,4 @@ spec:
     storage: true
     subresources: {}
 {{- end }}
+
