[CI] Helm Chart Update gitlab-runner

--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/configmap.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/templates/configmap.yaml
@@ -24,11 +24,11 @@ data:
 
     trap quit QUIT TERM
 
-    sh /configmaps/set-session-server-address &
+    bash /configmaps/set-session-server-address &
     child=$!
     wait "$child"
 
-    sh /configmaps/set-session-server-port &
+    bash /configmaps/set-session-server-port &
     child=$!
     wait "$child"
     {{- end }}
