--- a/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
+++ b/argocd-helm-charts/gitlab-runner/charts/gitlab-runner/values.yaml
@@ -179,6 +179,8 @@ sessionServer:
     enabled: false
     className: ""
     annotations: {}
+    tls:
+      - secretName: gitlab-runner-session-server
 
 ## For RBAC support:
 rbac:
